# custom_obj

./: CMakeLists.txt  custom_ompl_plugin_description.xml  package.xml
include/moveit_custom_objective_plugin/: custom_ompl_planner_manager.h  manipulability_objective.h  pose_goal_region.h  simple_penalty_objective.h
src/: custom_ompl_planner_manager.cpp  pose_goal_region.cpp
